--- a/.github/workflows/firstWorkFlow.yml
+++ b/.github/workflows/firstWorkFlow.yml
@@ -1,4 +1,6 @@
 name: first workflow
+env:
+  WORKFLOW_VAR: "This variable is declared athe workflow level"
 
 on:
   workflow_dispatch:
@@ -23,7 +25,22 @@ jobs:
        
   secondjob:
     runs-on: ubuntu-latest
+    needs: firstjob
+    env:
+      JOB_VAR: "This is a job variable"
     steps:
+      - name: environment variables
+        env:
+          STEP_VAR: "This variable is declared at the step level"
+        run: |
+          echo $WORKFLOW_VAR
+          echo $JOB_VAR
+          echo $STEP_VAR
+          echo "The following is a secre: ${{ secrets.SOME_SECRET }}, of course I can't tell you..."
+          echo "The following are default env vars"
+          echo $GITHUB_ACTOR
+          echo $GITHUB_JOB
+          echo $GITHUB_REF
       - name: secondJob script
         shell: bash
         run: |
